--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         window.cardsWidget?.init({
           container: document.getElementById("cards-widget"),
           props: {
-            backend_url: "https://olimpia.fitnesskit-admin.ru",
-            club_id: "2"
+            backend_url: "https://arch.fitnesskit-admin.ru",
+            club_id: "4"
           },
         });
       });
